# cc-skeleton

./: .dir-locals.el  .gitignore  Makefile.am  configure.ac
src/: main.cc
